Fix p.align to center

--- a/less/style.less
+++ b/less/style.less
@@ -99,6 +99,7 @@ img.aligntop {
 
 p {
 	margin-bottom: 1.5em;
+	text-align: center;
 }
 
 ul {
